force-app/main/default/objects/Boberdoo_Project_Value__c/Boberdoo_Project_Value__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It will hold Boberdoo Project Value for Inventory</description>
    <label>Boberdoo Project Value</label>
</CustomObject>