force-app/main/default/objects/Boberdoo_Project_Value__c/fields/Boberdoo_Project_Value__c.field-meta.xml
<CustomField>
    <fullName>Boberdoo_Project_Value__c</fullName>
    <description>It hold value for Boberdoo Project Value</description>
    <label>Boberdoo Project Value</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>