force-app/main/default/objects/Boberdoo_Project_Value__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>It will hold the first value of picklist</description>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>